tests/baselines/reference/parserGreaterThanTokenAmbiguity2.errors.txt
==== tests/cases/compiler/parserGreaterThanTokenAmbiguity2.ts (2 errors) ====
    1 > > 2;
        ~
!!! parserGreaterThanTokenAmbiguity2.ts(1,5): error TS1003: Identifier expected.
    ~~~~~~~
!!! parserGreaterThanTokenAmbiguity2.ts(1,1): error TS2009: Operator '>' cannot be applied to types 'boolean' and 'number'.